# TurboQuant

./: .gitignore  README.md  environment.yml  pyproject.toml
2026-06-22_shared-kv-systems/: BASELINE_COMPARISON_COMPLETE.md  BASELINE_REPRODUCTION_PLAN.md  BASELINE_REPRODUCTION_REPORT.md  BASELINE_REPRODUCTION_RESULTS.md  BASELINE_REPRODUCTION_STATUS.md  BASELINE_VALIDATION_AUDIT.md  COMPLETION_AUDIT.md  EXPERIMENT_LOG.md  GUARDED_POLICY_SEARCH.md  NEXT_EXPERIMENTS.md  QUANTIZED_PREFIX_TABLE_DESIGN.md  README.md  RELATED_WORK.md  TOP_CONFERENCE_ROADMAP.md  admission_all_guarded_tq35_s512_e2048_full.json  admission_all_guarded_tq35_s512_e2048_full.md  admission_none_fp16_fallback_full.json  admission_none_fp16_fallback_full.md  admission_oracle_mean_nonnegative_full.json  admission_oracle_mean_nonnegative_full.md  admission_probe1_mean_nonnegative_full.json  admission_probe1_mean_nonnegative_full.md  analyze_group_admission_policy.py  baseline_comparison_complete.csv  baseline_comparison_complete.json  baseline_comparison_current.csv  baseline_comparison_current.json  baseline_registry.json  build_claim_frontier.py  claim_frontier.json  claim_frontier.md  dry_run_guarded_quantized_prefix_smoke.summary.json  dry_run_quantized_prefix_smoke.summary.json  guarded_prefix_key_tq35_value_fp16_s512_e2048_guarded_0000_0040.summary.json  guarded_prefix_key_tq35_value_fp16_s512_e2048_guarded_0000_0040_summary.json  guarded_prefix_key_tq35_value_fp16_s512_e2048_guarded_0000_0040_summary.md  guarded_prefix_tq35_s256_e512_smoke_0000_0004.summary.json  (+89 more)
configs/: llama_first.yaml  (+1 more)
(+169 files in other folders)
