[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-reproduction"
version = "0.1.0"
description = "TurboQuant reproduction code"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant*"]

[tool.pytest.ini_options]
pythonpath = ["."]
